--- a/Pipfile
+++ b/Pipfile
@@ -60,6 +60,7 @@ flask-marshmallow = "==0.10.1"
 marshmallow-sqlalchemy = "==0.21.0"
 marshmallow-enum = "==1.5.1"
 marshmallow = "==3.3.0"
+flask-restful = "==0.3.7"
 
 [requires]
 python_version = "3.7"
